# MCP-Universe

./: .env.example  Makefile  batch_exec.sh  benchmark_output.json  op1.txt  op2.txt  op3.txt  op4.txt  pyproject.toml  requirements.txt  test_OneToolMultiReq.py  test_client.py  test_multiReqClient.py
experiments/: exp1_checkpoint_capsules.json  exp1_replayvschckpoint.py  exp1_results.jsonl  exp2_checkpoint_capsules.json  exp2_replaywpvscpwresume.py  exp2_results.jsonl  plots.py
experiments/exp1_history_logs/: checkpoint_cold.json  checkpoint_restart_1.json  checkpoint_restart_2.json  checkpoint_restart_3.json  checkpoint_restart_4.json  checkpoint_restart_5.json  replay_cold.json  replay_restart_4.json
experiments/exp2_history_logs/: checkpoint_cold.json  checkpoint_restart_1.json  checkpoint_restart_2.json  checkpoint_restart_3.json  checkpoint_restart_4.json  checkpoint_restart_5.json  replay_cold.json  replay_restart_4.json
mcpuniverse/agent/: function_call.py  harmony_agent.py  utils.py
mcpuniverse/benchmark/configs/test/: browser_automation.yaml
mcpuniverse/llm/: base.py  openai.py  openrouter.py
mcpuniverse/mcp/: manager.py
mcpuniverse/mcp/configs/: server_list.json
mcpuniverse/mcp/servers/yahoo_finance/: checkpoint_backend.py  server.py
mcpuniverse/pipeline/: README.md  __init__.py  __main__.py  celery_config.py  cli.py  launcher.py  task.py  utils.py  worker.py
mcpuniverse/pipeline/mq/: base.py  factory.py  kafka_consumer.py  kafka_producer.py  rabbitmq_consumer.py  rabbitmq_producer.py
tests/: test_dummy.py
tests/data/collection/: agent-1.yaml  agent-2.yaml  agent-3.yaml  agent-collection.yaml
tests/pipeline/: test_agent_launcher.py  test_agent_task.py  test_kafka_consumer.py  test_kafka_producer.py  test_pipeline_pull_task.py  test_pipeline_send_task.py  test_pipeline_start_celery.py  test_rabbitmq_consumer.py  test_rabbitmq_producer.py
